feat(database): Initialize database schema, seed data, and Docker setup
- Created SQL scripts for database schema including users, accounts, transactions, categories, budgets, and audit logs.
- Added seed scripts for default categories and sample data for development.
- Implemented Docker Compose configuration for MySQL and phpMyAdmin.
- Developed setup scripts for production and development environments.
- Removed outdated setup script for project structure.

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,9 @@ client/src/environments/.env*
 .env.staging
 .env.production
 
+# Database volumes and data
+mysql_data/
+
 # Google Service Account files
 client/src/assets/google-service-account.json
 client/src/assets/firebase-adminsdk*.json
